# rag-eval-api

./: README.md  main.py  pyproject.toml
app/: main.py
app/api/v1/: chat.py  upload.py
app/core/: embeddings.py  ingestion.py  qdrant.py
