[project]
name = "rag-eval-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "google-genai>=2.10.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-cohere>=0.6.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langsmith>=0.9.1",
    "pypdf>=6.14.2",
    "pypdf2>=3.0.1",
    "python-multipart>=0.0.32",
    "qdrant-client>=1.18.0",
    "ragas>=0.4.3",
    "sentence-transformers>=5.6.0",
    "sse-starlette>=3.4.5",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.18",
]
